@@ -9,6 +9,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Make sliders not show a text selection cursor on Android when they're not in edit mode.
  * Fix: Make layer list items not show a text selection cursor on Android.
  * Fix: Correctly calculate the distance to move before a press is no longer considered a long-press. The calculation ended up with incorectly small values in most cases.
+ * Fix: Improve long-press handling for context menus to act more like a real right-click would.
 
 2025-10-18 Version 2.3.0-beta.4
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
